[project]
name = "akinator-api"
version = "1.2.0"
description = "Multi-domain Akinator-style game server."

# Your application's dependencies
# uv will read this list to generate requirements.txt
dependencies = [
    "fastapi",
    "uvicorn[standard]",  # [standard] includes performance extras
    "gunicorn",           # The production-grade server
    "pydantic",
    "numpy",
    "pandas",
    "supabase",
    "redis",
    "msgpack",
    "msgpack-numpy",
    "python-dotenv"
]
